--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang='en'>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -35,7 +35,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
       <a href="index.html">
-        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
       </a>
       <a class="navbar-brand fancy d-none d-md-inline-block" href="index.html">
         Test<span class="brand">Drive</span>
@@ -90,7 +90,7 @@
           </a>
         </div>
         <div id="home_graphic" class="col-md-6">
-          <img id="home_img" src="img/home_1.svg" alt="home graphic">
+          <img id="home_img" src="img/home_1.svg" alt="">
         </div>
       </div>
 
@@ -143,25 +143,25 @@
           <h1>
             Education for the digital age
           </h1>
-          <h4> Social Media TestDrive simulates <b>realistic digital dilemmas and scenarios</b>
+          <h4> Social Media TestDrive simulates <strong>realistic digital dilemmas and scenarios</strong>
             that young people may encounter as they enter the social media world.
           </h4>
-          <h4> Each module teaches <b>essential
-            <a href="/faq.html">digital citizenship</a> concepts</b>,
+          <h4> Each module teaches <strong>essential
+            <a href="/faq.html" class='customHyperlink'>digital citizenship</a> concepts</strong>,
             covering topics such as privacy, online identities, cyberbullying,
             and more.
           </h4>
 
         </div>
         <div class='col-md-6'>
-          <img class="margined-left home_product1" src="img/home_2.png">
+          <img class="margined-left home_product1" src="img/home_2.png" alt="">
         </div>
       </div>
 
       <!-- Content Row 2 -->
       <div class="row align-items-center paddedRow">
         <div class="col-md-6 order-2 order-md-1">
-          <img class="margined-right home_product2" src="img/home_3.png">
+          <img class="margined-right home_product2" src="img/home_3.png" alt ="">
         </div>
         <div class='col-md-6 order-1 order-md-2'>
           <h1>
@@ -169,8 +169,8 @@
           </h1>
           <h4>
             TestDrive is most effective for new social media users or those who
-            are likely to enter into the social media world <b>in the near
-            future.</b> Our target audience is <b>middle school-aged youth</b>,
+            are likely to enter into the social media world <strong>in the near
+            future.</strong> Our target audience is <strong>middle school-aged youth</strong>,
             but we welcome everyone to explore it.
           </h4>
           <h4>
@@ -187,41 +187,41 @@
             A trusted resource for the classroom
           </h1>
           <h4>
-            <a href="/for_educators.html">Educators can use</a>
-            Social Media TestDrive to <b>engage with students</b> and spark conversations
+            <a href="/for_educators.html" class="customHyperlink">Educators can use</a>
+            Social Media TestDrive to <strong>engage with students</strong> and spark conversations
             around what it means to practice digital citizenship on social
             media.
           </h4>
           <h4>
             Social Media TestDrive’s modules are aligned with
-            <a href="https://www.commonsense.org/education/digital-citizenship/curriculum" target="_none">
-              <b>Common Sense Education's Digital Citizenship Curriculum</b></a>
+            <a href="https://www.commonsense.org/education/digital-citizenship/curriculum" target="_none"  class="customHyperlink">
+              <strong>Common Sense Education's Digital Citizenship Curriculum</strong></a>
             to provide coverage for a wide
             range of topics in digital literacy.
           </h4>
 
         </div>
         <div class='col-md-6'>
-          <img class="margined-left home_educators" src="img/home_educators.svg">
+          <img class="margined-left home_educators" src="img/home_educators.svg" alt="">
         </div>
       </div>
 
       <!-- Content Row 4 -->
       <div class="row align-items-center paddedRow">
         <div class="col-md-6 order-2 order-md-1">
-          <img class="home_parents" src="img/home_parents.svg">
+          <img class="home_parents" src="img/home_parents.svg" alt="">
         </div>
         <div class='col-md-6 order-1 order-md-2'>
           <h1>
             Use Social Media TestDrive at home, too
           </h1>
           <h4>
-            Social Media TestDrive modules can be completed from the <b>comfort of your own
-            home</b>, and we
-            <a href="/for_parents.html">encourage parents and guardians</a>
+            Social Media TestDrive modules can be completed from the <strong>comfort of your own
+            home</strong>, and we
+            <a href="/for_parents.html" class="customHyperlink">encourage parents and guardians</a>
             to try it out with their children.
           </h4>
-          <h4> Our platform <b>does not store or collect</b> any personal or
+          <h4> Our platform <strong>does not store or collect</strong> any personal or
             identifying information, so young people’s data will always be safe.
           </h4>
         </div>
@@ -254,7 +254,7 @@
       <!-- Join List-serv Button -->
       <div class="row justify-content-center" style="padding-bottom:2em;">
         <div class="col d-flex justify-content-center">
-          <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top">
+          <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top"  class="customHyperlink">
             <button type="button" class="nicelyRoundedButton">
               Sign up
             </button>
