--- a/modules.html
+++ b/modules.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang='en'>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -34,7 +34,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
 
       <a href="index.html">
-        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
       </a>
       <a class="navbar-brand fancy d-none d-md-inline-block" href="index.html">
         Test<span class="brand">Drive</span>
@@ -130,7 +130,7 @@
                     <div class="card" style="width: 18rem;">
                       <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
                         <div class="container cardImgContainer">
-                          <img class="card-img-top" id="heightReference" src="/img/smhabits.png" alt="Healthy Social Media Habits">
+                          <img class="card-img-top" src="/img/smhabits.png" alt="Healthy Social Media Habits">
                           <div class="card-img-overlay">
                             <span class="card-title moduleCardTitle">
                               Healthy Social Media Habits
@@ -206,7 +206,7 @@
                     <div class="card" style="width: 18rem;">
                       <a href="https://app.socialmediatestdrive.org/intro/phishing" class="card-text" target="_none">
                         <div class="container cardImgContainer">
-                          <img class="card-img-top" id="heightReference" src="/img/phishing.png" alt="Phishing">
+                          <img class="card-img-top" src="/img/phishing.png" alt="Phishing">
                           <div class="card-img-overlay">
                             <span class="card-title moduleCardTitle">Scams and Phishing</span>
                           </div>
@@ -827,7 +827,7 @@
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/safe-posting" class="card-text" target="_none">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/privateinfo.png" alt="Private Information">
+              <img class="card-img-top" src="/img/privateinfo.png" alt="Private Information Thumbnail">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">
                   Is It Private Information?
@@ -865,7 +865,7 @@
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/digfoot" class="card-text" target="_none">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/digfoot.png" alt="Digital Footprints">
+              <img class="card-img-top" src="/img/digfoot.png" alt="Digital Footprints">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">
                   Shaping Your Digital Footprint
@@ -902,7 +902,7 @@
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/cyberbullying" class="card-text" target="_none">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/upstander.png" alt="Upstander">
+              <img class="card-img-top" src="/img/upstander.png" alt="Upstander Thumbnail">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">
                   How to Be an Upstander
@@ -940,7 +940,7 @@
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/smhabits.png" alt="Healthy Social Media Habits">
+              <img class="card-img-top" src="/img/smhabits.png" alt="Healthy Social Media Habits Thumbnail">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">
                   <span class="badge badge-primary newTag">NEW!</span>
@@ -979,7 +979,7 @@
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/presentation" class="card-text" target="_none">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/onlineidentity.png" alt="Online Identities">
+              <img class="card-img-top" src="/img/onlineidentity.png" alt="Online Identities Thumbnail">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">
                   Online Identities
@@ -1016,7 +1016,7 @@
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/privacy" class="card-text" target="_none">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/smprivacy.png" alt="Social Media Privacy">
+              <img class="card-img-top" src="/img/smprivacy.png" alt="Social Media Privacy Thumbnail">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">Social Media Privacy</span>
               </div>
@@ -1052,7 +1052,7 @@
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/targetedads.png" alt="Targeted Advertising">
+              <img class="card-img-top" src="/img/targetedads.png" alt="Targeted Advertising Thumbnail">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">
                   <span class="badge badge-primary newTag">NEW!</span>
@@ -1091,7 +1091,7 @@
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/phishing" class="card-text" target="_none">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/phishing.png" alt="Phishing">
+              <img class="card-img-top" src="/img/phishing.png" alt="Phishing Thumbnail">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">
                   <span class="badge badge-primary newTag">NEW!</span>
@@ -1130,7 +1130,7 @@
         <div class="card" style="width: 18rem;">
           <a href="https://app.socialmediatestdrive.org/intro/digital-literacy" class="card-text" target="_none">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/news.png" alt="Fake News">
+              <img class="card-img-top" src="/img/news.png" alt="Fake News">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">
                   News in Social Media
