--- a/press.html
+++ b/press.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang='en'>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
 
       <a href="index.html">
-        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
       </a>
       <a class="navbar-brand fancy d-none d-md-inline-block" href="index.html">
         Test<span class="brand">Drive</span>
@@ -96,7 +96,7 @@
         </div>
         <div class='col-lg-5 pressLogoContainer d-flex
         justify-content-center align-items-center'>
-          <img class="pressLogo" src="img/press/psychtoday.jpg">
+          <img class="pressLogo" src="img/press/psychtoday.jpg" alt='Psychology Today Logo'>
         </div>
       </div>
 
@@ -118,7 +118,7 @@
         </div>
         <div class='col-lg-5 pressLogoContainer d-flex
         justify-content-center align-items-center'>
-          <img class="pressLogo" src="img/press/ecornell.jpg">
+          <img class="pressLogo" src="img/press/ecornell.jpg" alt='eCornell Logo'>
         </div>
       </div>
 
@@ -141,7 +141,7 @@
         </div>
         <div class='col-lg-5 pressLogoContainer d-flex
         justify-content-center align-items-center'>
-          <img class="pressLogo" src="img/press/newswise.png">
+          <img class="pressLogo" src="img/press/newswise.png" alt='Newswise Logo'>
         </div>
       </div>
 
@@ -164,7 +164,7 @@
         </div>
         <div class='col-lg-5 pressLogoContainer d-flex
         justify-content-center align-items-center'>
-          <img class="pressLogo" src="img/press/cornellchronicle.png">
+          <img class="pressLogo" src="img/press/cornellchronicle.png" alt='Cornell Chronicle Logo'>
         </div>
       </div>
 
@@ -186,7 +186,7 @@
         </div>
         <div class='col-lg-5 pressLogoContainer d-flex
         justify-content-center align-items-center'>
-          <img class="pressLogo" src="img/press/psychtoday.jpg">
+          <img class="pressLogo" src="img/press/psychtoday.jpg" alt='Psychology Today Logo'>
         </div>
       </div>
 
@@ -210,7 +210,7 @@
         </div>
         <div class='col-lg-5 pressLogoContainer d-flex
         justify-content-center align-items-center'>
-          <img class="pressLogo" src="img/press/dailysun.png">
+          <img class="pressLogo" src="img/press/dailysun.png" alt='The Cornell Daily Sun Logo'>
         </div>
       </div>
 
