--- a/faq.html
+++ b/faq.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
 
       <a href="index.html">
-        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
       </a>
       <a class="navbar-brand fancy d-none d-md-inline-block" href="index.html">
         Test<span class="brand">Drive</span>
@@ -84,24 +84,24 @@
         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
           <!-- Tab 1 -->
           <li class="nav-item">
-            <a class="nav-link active" id="pills-home-tab" data-toggle="pill"
-            href="#pills-home" role="tab" aria-controls="pills-home"
+            <a class="nav-link active" id="pills-general-tab" data-toggle="pill"
+            href="#pills-general" role="tab" aria-controls="pills-general"
             aria-selected="true">
               General
             </a>
           </li>
           <!-- Tab 2 -->
           <li class="nav-item">
-            <a class="nav-link" id="pills-profile-tab" data-toggle="pill"
-            href="#pills-profile" role="tab" aria-controls="pills-profile"
+            <a class="nav-link" id="pills-educators-tab" data-toggle="pill"
+            href="#pills-educators" role="tab" aria-controls="pills-educators"
             aria-selected="false">
               Educators
             </a>
           </li>
           <!-- Tab 3 -->
           <li class="nav-item">
-            <a class="nav-link" id="pills-contact-tab" data-toggle="pill"
-            href="#pills-contact" role="tab" aria-controls="pills-contact"
+            <a class="nav-link" id="pills-parents-tab" data-toggle="pill"
+            href="#pills-parents" role="tab" aria-controls="pills-parents"
             aria-selected="false">
               Parents
             </a>
@@ -111,7 +111,7 @@
       <div class="tab-content" id="pills-tabContent">
 
         <!-- Tab 1 Content -->
-        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+        <div class="tab-pane fade show active" id="pills-general" role="tabpanel" aria-labelledby="pills-general-tab">
           <div class="container-fluid questionContainer">
 
             <!-- First row, tab 1 -->
@@ -237,7 +237,7 @@
         </div>
 
         <!-- Tab 2 Content -->
-        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+        <div class="tab-pane fade" id="pills-educators" role="tabpanel" aria-labelledby="pills-educators-tab">
           <div class="container-fluid questionContainer">
 
             <!-- First row, tab 2 -->
@@ -310,7 +310,7 @@
         </div>
 
         <!-- Tab 3 -->
-        <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+        <div class="tab-pane fade" id="pills-parents" role="tabpanel" aria-labelledby="pills-parents-tab">
           <div class="container-fluid questionContainer">
 
             <!-- First row, tab 3 -->
