--- a/for_educators.html
+++ b/for_educators.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang='en'>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
 
       <a href="index.html">
-        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
       </a>
       <a class="navbar-brand fancy d-none d-md-inline-block" href="index.html">
         Test<span class="brand">Drive</span>
@@ -89,14 +89,14 @@
           </a>
         </div>
         <div class='col-md-6'>
-          <img class="educators_image" src="img/educators_1.svg">
+          <img class="educators_image" src="img/educators_1.svg" alt="">
         </div>
       </div>
 
       <!-- Content Row 2 -->
       <div class="row align-items-center paddedRow">
         <div class="col-md-6 order-2 order-md-1">
-          <img class="educators_image" src="img/educators_2.png">
+          <img class="educators_image" src="img/educators_2.png" alt="">
         </div>
         <div class='col-md-6 order-1 order-md-2'>
           <h1>Social media education for today’s youth</h1>
@@ -123,7 +123,7 @@
 
         </div>
         <div class='col-md-6'>
-          <img class="margined-left educators_image" src="img/educators_3.png">
+          <img class="margined-left educators_image" src="img/educators_3.png" alt="">
         </div>
       </div>
 
