--- a/for_parents.html
+++ b/for_parents.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang='en'>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
 
       <a href="index.html">
-        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
       </a>
       <a class="navbar-brand fancy d-none d-md-inline-block" href="index.html">
         Test<span class="brand">Drive</span>
@@ -88,14 +88,14 @@
         </a>
       </div>
       <div class='col-md-6'>
-        <img class="educators_image" src="img/parents_1.svg">
+        <img class="educators_image" src="img/parents_1.svg" alt="">
       </div>
     </div>
 
     <!-- Content Row 2 -->
     <div class="row align-items-center paddedRow">
       <div class="col-md-6 order-2 order-md-1">
-        <img class="parents_2" src="img/parents_2.png">
+        <img class="parents_2" src="img/parents_2.png" alt="">
       </div>
       <div class='col-md-6 order-1 order-md-2'>
         <h1>Teach your children about social media, risk-free</h1>
@@ -112,7 +112,7 @@
     <div class="row align-items-center paddedRow">
       <div class="col-md-6">
         <h1>We care about your child’s privacy</h1>
-        <h4> Social Media TestDrive <b>does not collect or store</b> any personal information.
+        <h4> Social Media TestDrive <strong>does not collect or store</strong> any personal information.
           Young people are able to create a profile,  but all data is
           permanently deleted once users finish a module or leave the
           Social Media TestDrive website.
@@ -127,7 +127,7 @@
 
       </div>
       <div class='col-md-6'>
-        <img class="parents_3" src="img/parents_3.png">
+        <img class="parents_3" src="img/parents_3.png" alt="">
       </div>
     </div>
 
