--- a/team.html
+++ b/team.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang='en'>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
 
       <a href="index.html">
-        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
       </a>
       <a class="navbar-brand fancy d-none d-md-inline-block" href="index.html">
         Test<span class="brand">Drive</span>
