Accessibility improvement to site logo

--- a/faq.html
+++ b/faq.html
@@ -36,11 +36,13 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
 
-      <a href="index.html">
-        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
-      </a>
-      <a class="navbar-brand fancy d-none d-md-inline-block" href="index.html">
-        Test<span class="brand">Drive</span>
+      <a href="index.html" class="logoLinkContainer">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px"
+        class="d-inline-block align-top testDriveLogo"
+        alt="Social Media TestDrive Logo">
+        <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
+          Test<span class="brand">Drive</span>
+        </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
