More accessibility improvements

--- a/faq.html
+++ b/faq.html
@@ -206,8 +206,9 @@
                 <h3 class="questionTitle">
                   Who created Social Media TestDrive?</h3>
                 <p>
-                  Social Media TestDrive is a platform created by researchers in the Cornell
-                  University Social Media Lab, in collaboration with Common
+                  Social Media TestDrive is a platform created by researchers in the
+                  <a href="http://socialmedialab.cornell.edu/" target="_blank"> Cornell University Social Media Lab</a>,
+                  in collaboration with Common
                   Sense Education.
                 </p>
                 <p>
