--- a/for_parents.html
+++ b/for_parents.html
@@ -121,8 +121,7 @@
         <h4>
           We take privacy and safety seriously; see our
           <a href="https://app.socialmediatestdrive.org/privacy" target="_none">
-            privacy policy
-          </a>
+            privacy policy</a>
           for more details.
         </h4>
 
