--- a/modules.html
+++ b/modules.html
@@ -830,7 +830,7 @@
             <div class="container cardImgContainer">
               <img class="card-img-top" src="/img/privateinfo.png" alt="Private Information Thumbnail">
               <div class="card-img-overlay">
-                <span class="card-title moduleCardTitle">
+                <span class="card-title moduleCardTitle" id='modTitle1'>
                   Is It Private Information?
                 </span>
               </div>
@@ -842,21 +842,20 @@
               audiences and what kind of information is inappropriate to share
               on social media.
             </span>
-            <a href="https://app.socialmediatestdrive.org/intro/safe-posting" class="card-text" target="_none">
-              Click here to start
-            </a>
+            <a id='modLink1' aria-labelledby='modLink1 modTitle1' href="https://app.socialmediatestdrive.org/intro/safe-posting" class="card-text" target="_none">
+              Click here to start</a>
             <span class="card-text">
               the module.
             </span>
             <br>
             <br>
-            <span class="card-text-csAlignment">
+            <p class="card-text-csAlignment">
               Aligned with Common Sense Education's Digital
-              Citizenship lesson: Chatting Safely Online.
-              <a href="https://www.commonsense.org/education/digital-citizenship/lesson/chatting-safely-online"  target="_blank">
+              Citizenship lesson: <span id='csTitle1'>Chatting Safely Online.</span>
+              <a id='csLink1' aria-labelledby='csLink1 csTitle1' href="https://www.commonsense.org/education/digital-citizenship/lesson/chatting-safely-online"  target="_blank">
                 Learn more...
               </a>
-            </span>
+            </p>
           </div>
         </div>
       </div>
@@ -868,7 +867,7 @@
             <div class="container cardImgContainer">
               <img class="card-img-top" src="/img/digfoot.png" alt="Digital Footprints">
               <div class="card-img-overlay">
-                <span class="card-title moduleCardTitle">
+                <span class="card-title moduleCardTitle" id='modTitle2'>
                   Shaping Your Digital Footprint
                 </span>
               </div>
@@ -879,21 +878,20 @@
               Young people explore how actions on social media create a digital
               footprint and learn skills to positively shape digital footprints.
             </span>
-            <a href="https://app.socialmediatestdrive.org/intro/digfoot" class="card-text" target="_none">
-              Click here to start
-            </a>
+            <a id='modLink2' aria-labelledby='modLink2 modTitle2' href="https://app.socialmediatestdrive.org/intro/digfoot" class="card-text" target="_none">
+              Click here to start</a>
             <span class="card-text">
               the module.
             </span>
             <br>
             <br>
-            <span class="card-text-csAlignment">
+            <p class="card-text-csAlignment">
               Aligned with Common Sense Education's Digital
-              Citizenship lesson: Social Media and Digital Footprints.
-              <a href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities" target="_blank">
+              Citizenship lesson: <span id='csTitle2'> Social Media and Digital Footprints.</span>
+              <a id='csLink2' aria-labelledby='csLink2 csTitle2' href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities" target="_blank">
                 Learn more...
               </a>
-            </span>
+            </p>
           </div>
         </div>
       </div>
@@ -905,7 +903,7 @@
             <div class="container cardImgContainer">
               <img class="card-img-top" src="/img/upstander.png" alt="Upstander Thumbnail">
               <div class="card-img-overlay">
-                <span class="card-title moduleCardTitle">
+                <span class="card-title moduleCardTitle" id='modTitle3'>
                   How to Be an Upstander
                 </span>
               </div>
@@ -916,22 +914,21 @@
               Young people identify signs of cyberbullying and practice how to
               respond when seeing cyberbullying happening to others.
             </span>
-            <a href="https://app.socialmediatestdrive.org/intro/cyberbullying" class="card-text" target="_none">
-              Click here to start
-            </a>
+            <a id='modLink3' aria-labelledby='modLink3 modTitle3' href="https://app.socialmediatestdrive.org/intro/cyberbullying" class="card-text" target="_none">
+              Click here to start</a>
             <span class="card-text">
               the module.
             </span>
             <br>
             <br>
-            <span class="card-text-csAlignment">
+            <p class="card-text-csAlignment">
               Aligned Common Sense Education's Digital
-              Citizenship Lesson: Upstanders and Allies: Taking Action
-              Against Cyberbullying.
-              <a href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying" target="_blank">
+              Citizenship Lesson: Upstanders and Allies: <span id='csTitle3'>Taking Action
+              Against Cyberbullying.</span>
+              <a id='csLink3' aria-labelledby='csLink3 csTitle3' href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying" target="_blank">
                 Learn more...
               </a>
-            </span>
+            </p>
           </div>
         </div>
       </div>
@@ -943,7 +940,7 @@
             <div class="container cardImgContainer">
               <img class="card-img-top" src="/img/smhabits.png" alt="Healthy Social Media Habits Thumbnail">
               <div class="card-img-overlay">
-                <span class="card-title moduleCardTitle">
+                <span class="card-title moduleCardTitle" id='modTitle4'>
                   <span class="badge badge-primary newTag">NEW!</span>
                    &nbsp Healthy Social Media Habits
                 </span>
@@ -956,21 +953,20 @@
               their attention and practice healthy media habits to achieve media
               balance.
             </span>
-            <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
-              Click here to start
-            </a>
+            <a id='modLink4' aria-labelledby='modLink4 modTitle4' href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
+              Click here to start</a>
             <span class="card-text">
               the module.
             </span>
             <br>
             <br>
-            <span class="card-text-csAlignment">
+            <p class="card-text-csAlignment">
               Aligned with Common Sense Education's Digital
-              Citizenship lesson: Digital Media and Your Brain.
-              <a href="https://www.commonsense.org/education/digital-citizenship/lesson/digital-media-and-your-brain" target="_blank">
+              Citizenship lesson: <span id='csTitle4'> Digital Media and Your Brain.</span>
+              <a id='csLink4' aria-labelledby="csLink4 csTitle4" href="https://www.commonsense.org/education/digital-citizenship/lesson/digital-media-and-your-brain" target="_blank">
                 Learn more...
               </a>
-            </span>
+            </p>
           </div>
         </div>
       </div>
@@ -982,7 +978,7 @@
             <div class="container cardImgContainer">
               <img class="card-img-top" src="/img/onlineidentity.png" alt="Online Identities Thumbnail">
               <div class="card-img-overlay">
-                <span class="card-title moduleCardTitle">
+                <span class="card-title moduleCardTitle" id='modTitle5'>
                   Online Identities
                 </span>
               </div>
@@ -993,21 +989,20 @@
               Young people learn how to manage self-presentation and how online
               identities can change with different audiences on social media.
             </span>
-            <a href="https://app.socialmediatestdrive.org/intro/presentation" class="card-text" target="_none">
-              Click here to start
-            </a>
+            <a id='modLink5' aria-labelledby='modLink5 modTitle5' href="https://app.socialmediatestdrive.org/intro/presentation" class="card-text" target="_none">
+              Click here to start</a>
             <span class="card-text">
               the module.
             </span>
             <br>
             <br>
-            <span class="card-text-csAlignment">
+            <p class="card-text-csAlignment">
               Aligned with Common Sense Education's Digital
-              Citizenship lesson: Who Are You Online?
-              <a href="https://www.commonsense.org/education/digital-citizenship/lesson/who-are-you-online" target="_blank">
+              Citizenship lesson: <span id='csTitle5'>Who Are You Online?</span>
+              <a id='csLink5' aria-labelledby='csLink5 csTitle5' href="https://www.commonsense.org/education/digital-citizenship/lesson/who-are-you-online" target="_blank">
                 Learn more...
               </a>
-            </span>
+            </p>
           </div>
         </div>
       </div>
@@ -1019,7 +1014,9 @@
             <div class="container cardImgContainer">
               <img class="card-img-top" src="/img/smprivacy.png" alt="Social Media Privacy Thumbnail">
               <div class="card-img-overlay">
-                <span class="card-title moduleCardTitle">Social Media Privacy</span>
+                <span class="card-title moduleCardTitle" id='modTitle6'>
+                  Social Media Privacy
+                </span>
               </div>
             </div>
           </a>
@@ -1029,21 +1026,20 @@
               about users and learn strategies for protecting privacy on social
               media.
             </span>
-            <a href="https://app.socialmediatestdrive.org/intro/privacy" class="card-text" target="_none">
-              Click here to start
-            </a>
+            <a id='modLink6' aria-labelledby='modLink6 modTitle6' href="https://app.socialmediatestdrive.org/intro/privacy" class="card-text" target="_none">
+              Click here to start</a>
             <span class="card-text">
               the module.
             </span>
             <br>
             <br>
-            <span class="card-text-csAlignment">
+            <p class="card-text-csAlignment">
               Aligned with Common Sense Education's Digital
-              Citizenship lesson: Being Aware of What You Share.
-              <a href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share" target="_blank">
+              Citizenship lesson: <span id='csTitle6'>Being Aware of What You Share.</span>
+              <a id='csLink6' aria-labelledby='csLink6 csTitle6' href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share" target="_blank">
                 Learn more...
               </a>
-            </span>
+            </p>
           </div>
         </div>
       </div>
@@ -1055,7 +1051,7 @@
             <div class="container cardImgContainer">
               <img class="card-img-top" src="/img/targetedads.png" alt="Targeted Advertising Thumbnail">
               <div class="card-img-overlay">
-                <span class="card-title moduleCardTitle">
+                <span class="card-title moduleCardTitle" id='modTitle7'>
                   <span class="badge badge-primary newTag">NEW!</span>
                   &nbsp Ads on Social Media
                 </span>
@@ -1068,21 +1064,20 @@
               targeted ads on social media and learn how to identify ads and
               sponsored posts within their feed.
             </span>
-            <a href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
-              Click here to start
-            </a>
+            <a id='modLink7' aria-labelledby='modLink7 modTitle7' href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
+              Click here to start</a>
             <span class="card-text">
               the module.
             </span>
             <br>
             <br>
-            <span class="card-text-csAlignment">
+            <p class="card-text-csAlignment">
               Aligned with Common Sense Education's Digital
-              Citizenship lesson: Big, Big Data.
-              <a href="https://www.commonsense.org/education/digital-citizenship/lesson/big-big-data" target="_blank">
+              Citizenship lesson: <span id='csTitle7'>Big, Big Data.</span>
+              <a id='csLink7' aria-labelledby='csLink7 csTitle7' href="https://www.commonsense.org/education/digital-citizenship/lesson/big-big-data" target="_blank">
                 Learn more...
               </a>
-            </span>
+            </p>
           </div>
         </div>
       </div>
@@ -1094,7 +1089,7 @@
             <div class="container cardImgContainer">
               <img class="card-img-top" src="/img/phishing.png" alt="Phishing Thumbnail">
               <div class="card-img-overlay">
-                <span class="card-title moduleCardTitle">
+                <span class="card-title moduleCardTitle" id='modTitle8'>
                   <span class="badge badge-primary newTag">NEW!</span>
                   &nbsp Scams and Phishing
                 </span>
@@ -1107,21 +1102,20 @@
               how to identify and take action against phishing scams on social
               media.
             </span>
-            <a href="https://app.socialmediatestdrive.org/intro/phishing" class="card-text" target="_none">
-              Click here to start
-            </a>
+            <a id='modLink8' aria-labelledby='modLink8 modTitle8' href="https://app.socialmediatestdrive.org/intro/phishing" class="card-text" target="_none">
+              Click here to start</a>
             <span class="card-text">
               the module.
             </span>
             <br>
             <br>
-            <span class="card-text-csAlignment">
+            <p class="card-text-csAlignment">
               Aligned with Common Sense Education's Digital
-              Citizenship lesson: Don’t Feed the Phish.
-              <a href="https://www.commonsense.org/education/digital-citizenship/lesson/dont-feed-the-phish" target="_blank">
+              Citizenship lesson: <span id='csTitle8'>Don’t Feed the Phish.</span>
+              <a id='csLink8' aria-labelledby='csLink8 csTitle8' href="https://www.commonsense.org/education/digital-citizenship/lesson/dont-feed-the-phish" target="_blank">
                 Learn more...
               </a>
-            </span>
+            </p>
           </div>
         </div>
       </div>
@@ -1133,7 +1127,7 @@
             <div class="container cardImgContainer">
               <img class="card-img-top" src="/img/news.png" alt="Fake News">
               <div class="card-img-overlay">
-                <span class="card-title moduleCardTitle">
+                <span class="card-title moduleCardTitle" id='modTitle9'>
                   News in Social Media
                 </span>
               </div>
@@ -1144,21 +1138,20 @@
               Young people understand why fake news exists and how to identify the
               telltale signs of fake news on social media.
             </span>
-            <a href="https://app.socialmediatestdrive.org/intro/digital-literacy" class="card-text" target="_none">
-              Click here to start
-            </a>
+            <a id='modLink9' aria-labelledby='modLink9 modTitle9' href="https://app.socialmediatestdrive.org/intro/digital-literacy" class="card-text" target="_none">
+              Click here to start</a>
             <span class="card-text">
               the module.
             </span>
             <br>
             <br>
-            <span class="card-text-csAlignment">
+            <p class="card-text-csAlignment">
               Aligned with Common Sense Education's Digital
-              Citizenship lesson: Finding Credible News.
-              <a href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news" target="_blank">
+              Citizenship lesson: <span id='csTitle9'>Finding Credible News.</span>
+              <a id='csLink9' aria-labelledby='csLink9 csTitle9' href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news" target="_blank">
                 Learn more...
               </a>
-            </span>
+            </p>
           </div>
         </div>
       </div>
