--- a/team.html
+++ b/team.html
@@ -83,8 +83,9 @@
         <div class="col-sm-12 col-md-6 col-lg-4 text-center teamSubtitle">
           <h4 class="teamText">
             Social Media TestDrive was created by a multidisciplinary team of
-            researchers, designers, and developers at Cornell's Social Media
-            Lab, and a collaboration with Common Sense Education.
+            researchers, designers, and developers at
+            <a href="http://socialmedialab.cornell.edu/" target="_blank">Cornell's Social Media Lab</a>,
+            and a collaboration with Common Sense Education.
           </h4>
         </div>
       </div>
@@ -101,7 +102,8 @@
           <p class="teamText">
             Dr. Natalie Bazarova. Dr. Bazarova is the project co-founder and the
             current Project Director. She is an Associate Professor in the
-            Department of Communication and the Director of the Social Media Lab
+            Department of Communication and the Director of the
+            <a href="http://socialmedialab.cornell.edu/" target="_blank">Social Media Lab</a>
             at Cornell University. She can be contacted at nnb8@cornell.edu.
           </p>
           <p class="teamText">
